# anchor_survey

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: publish.yml  tests.yml
gui/: __init__.py  survey_gui.py
survey/: __init__.py  survey.py
tests/: test_survey.py
