[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anchor_survey"
version = "0.1.0"
description = "Interactive tool for estimating seafloor anchor positions from ship survey data."
readme = "README.md"
authors = [
    { name = "Andrew Reed" }
]
license = { text = "BSD-3" }
requires-python = ">=3.9"

dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "panel>=1.4.0",
    "pytest"  # for tests
]

[project.urls]
"Homepage" = "https://github.com/reedan88/anchor_survey"
"Issues" = "https://github.com/reedan88/anchor_survey/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["survey*", "gui*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --maxfail=1 --disable-warnings"
testpaths = ["tests"]
