[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anchor_survey"
version = "0.1.0"
description = "Interactive tool for estimating seafloor anchor positions from ship survey data."
readme = "README.md"
authors = [
    { name = "Andrew Reed", email = "andrew.c.reed88@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.3",
    "numpy>=1.21",
    "matplotlib>=3.4",
    "panel>=1.4.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Oceanography",
    "Topic :: Scientific/Engineering :: GIS",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/reedan88/anchor_survey"
Issues = "https://github.com/reedan88/anchor_survey/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["survey", "gui"]

[tool.setuptools.package-data]
"*" = ["data/*.dat"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --maxfail=1 --disable-warnings"
testpaths = ["tests"]
